fixed navbar invisiblity due to copy and pasting error in the header file

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -30,23 +30,31 @@
     height: 100%;
     width: 12%;
 }
-.toggle{
+
+.toggle {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #31A0FE;
     background-color: white;
     font-family: Cabin, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.navbar,.signup-button{
+
+.navbar,
+.signup-button {
     display: none;
     cursor: pointer;
     position: relative;
 }
-.navbar>div{
+
+.navbar>div {
     position: relative;
     text-align: center;
 }
-.show{
+
+.show {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,6 +65,7 @@
     left: 0;
     top: var(--header-height);
 }
+
 .show-button {
     position: absolute;
     display: flex;
@@ -69,15 +78,17 @@
 }
 
 @media (min-width: 768px) {
-    .toggle{
+    .toggle {
         display: none;
     }
     .header {
-        padding: 0, 100px;
+        padding: 0 100px;
     }
 
     .navbar {
         display: flex;
+        position: relative;
+        opacity: 1;
         width: 35%;
         height: 100%;
         justify-content: space-evenly;
